--- a/DockerFile
+++ b/DockerFile
@@ -20,4 +20,4 @@ WORKDIR /app
 COPY --from=build /app/out ./
 
 # Run the app
-ENTRYPOINT ["dotnet", "OldPhonePad.dll"]
+ENTRYPOINT ["dotnet", "OldPhoneKeypad.dll"]
